--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 									<a href="index.html" class="logo"><strong>Webpage</strong> by HTML5 UP</a>
 									<ul class="icons">
 										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 										<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
+										<li><a href="https://www.linkedin.com/in/olaniyibello" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+										<li><a href="mailto:ola_bello_outlook.com" class="icon solid fa-envelope"><span class="label">Outlook</span></a></li>
+										<li><a href="https://github.com/NeeyiOla" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 									</ul>
 								</header>
 
@@ -36,11 +36,11 @@
 								<section id="banner">
 									<div class="content">
 										<header>
-											<h1>Hi, Welcome to My PORTFOLIO<br />
+											<h1>Welcome to My Data & Business Intelligence Portfolio<br />
 											</h1>
-											<p>My World of various Project to showcase my Skills</p>
+											<p>Explore a collection of real-world projects that demonstrate my skills in data analysis, visualization, and decision support. </p>
 										</header>
-										<p>I'm thrilled to share my journey and accomplishments in data analysis with you. Through this website, you'll discover a showcase of my projects, where I've leveraged powerful tools and technologies to transform data into actionable insights.</p>
+										<p>I'm excited to share my journey in turning raw data into meaningful insights. This portfolio highlights how I’ve used tools like Power BI, SQL, Tableau, Github and Excel to solve business problems, uncover trends, and support strategic decisions. </p>
 										<ul class="actions">
 											<li><a href="generic.html" class="button big">Learn More about Me</a></li>
 										</ul>
@@ -164,7 +164,6 @@
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
 										<li><a href="generic.html">About Me</a></li>
-										<li><a href="elements.html">Staying Updated</a></li>
 										<li>
 											<span class="opener">Sub-Menu</span>
 											<ul class="link">
@@ -183,7 +182,6 @@
 											<li><a href="#">SQL Learning Materials</a></li>
 										</ul>
 									</li>
-										<li><a href="#">Maximus Erat</a></li>
 									</ul>
 								</nav>
 							
