--- a/index.html
+++ b/index.html
@@ -116,11 +116,12 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/Open Hola Cookies company analysis in Power BI.png" alt="" /></a>
-											<h3>Power Bi Case Study</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+											<a href="#" class="image"><img src="image/Dashboard_1.png" alt="" /></a>
+											<h3>Competitive Sales Channel Analysis</h3>
+											<p>Power BI project analysing [ContosoRetailDW] Retail data from SSMS via Direct-Query. Features interactive dashboards for sales channel performance, profit margins, and regional trends.
+												 Includes data modelling, DAX, Power Query ETL, and actionable insights for executive decision-making. </p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="https://neeyiola.github.io/Sales_Channel_Analysis/" class="button" target="_blank">More</a></li>
 											</ul>
 										</article>
 										<article>
