--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="image/Dashboard_1.png" alt="" /></a>
+											<a href="#" class="image"><img src="image/DashBoard_1.png" alt="" /></a>
 											<h3>Competitive Sales Channel Analysis</h3>
 											<p>Power BI project analysing [ContosoRetailDW] Retail data from SSMS via Direct-Query. Features interactive dashboards for sales channel performance, profit margins, and regional trends.
 												 Includes data modelling, DAX, Power Query ETL, and actionable insights for executive decision-making. </p>
@@ -125,11 +125,12 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
-											<h3>SQL Case Study</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+											<a href="#" class="image"><img src="image/Chinook_Music_Fest1.png" alt="" /></a>
+											<h3>Competitive Sales Channel Analysis </h3>
+											<p>Utilised the Chinook Music Store dataset in SQLite to write and run SQL queries for data extraction. Exported query results to CSV for analysis and visualization. 
+												Presented insights using PowerPoint, focusing on clear storytelling to effectively communicate findings to stakeholders. </p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="https://neeyiola.github.io/Chinook_Music_Store_-SQL-/" class="button" target="_blank">More</a></li>
 											</ul>
 										</article>
 										<article>
